[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/structures/structure_palmtree_whole_sand.png" type="Texture" id=1]
[ext_resource path="res://assets/art/structures/structure_palmtree_leaves.png" type="Texture" id=2]
[ext_resource path="res://src/Structure_Tree.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 11.75 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=4]
resource_name = "sway"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Base/Leaves:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, 5.0, 0.0 ]
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.559006, 0.73913 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 1, 0, 1 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 50, 0 )
initial_velocity = 8.0
initial_velocity_random = 1.0
angular_velocity = 15.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 7 )

[node name="Structure_Tree" type="Node2D"]
z_as_relative = false
script = ExtResource( 3 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 0, -112 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionBox" type="StaticBody2D" parent="Base"]
position = Vector2( 12, 36 )

[node name="CollisionShape" type="CollisionShape2D" parent="Base/CollisionBox"]
position = Vector2( 0, 33.75 )
shape = SubResource( 1 )

[node name="HarvestBox" type="Area2D" parent="Base"]
position = Vector2( 12, 76 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 16
collision_mask = 0

[node name="HarvestShape" type="CollisionShape2D" parent="Base/HarvestBox"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="Leaves" type="Sprite" parent="Base"]
position = Vector2( 12, 4 )
texture = ExtResource( 2 )

[node name="Animations" type="AnimationPlayer" parent="."]
anims/sway = SubResource( 4 )

[node name="LeafParticle" type="Particles2D" parent="."]
position = Vector2( 8, -111 )
scale = Vector2( 2, 2 )
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="Base/HarvestBox" to="." method="_on_hit"]
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
